--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 soselfie/soselfie.xcodeproj/project.xcworkspace/xcuserdata/tomvankruijsbergen.xcuserdatad/UserInterfaceState.xcuserstate
 
 *.xcuserstate
+
+*.xcuserstate
+
+soselfie/soselfie.xcodeproj/project.xcworkspace/xcuserdata/tomvankruijsbergen.xcuserdatad/UserInterfaceState.xcuserstate
