--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ soselfie/soselfie.xcodeproj/project.xcworkspace/xcuserdata/tomvankruijsbergen.xc
 *.xcuserstate
 
 soselfie/soselfie.xcodeproj/project.xcworkspace/xcuserdata/tomvankruijsbergen.xcuserdatad/UserInterfaceState.xcuserstate
+
+soselfie/soselfie.xcodeproj/xcuserdata/tyg.xcuserdatad/xcschemes/xcschememanagement.plist
+
+soselfie/soselfie.xcodeproj/xcuserdata/tyg.xcuserdatad/xcschemes/soselfie.xcscheme
+
+*.xccheckout
