Post merge commit
View controller added
1) iPhone 4 designs are still needed
2)small design issues are still needed to be fixed

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ soselfie/soselfie.xcodeproj/xcuserdata/tyg.xcuserdatad/xcschemes/xcschememanagem
 soselfie/soselfie.xcodeproj/xcuserdata/tyg.xcuserdatad/xcschemes/soselfie.xcscheme
 
 *.xccheckout
+
+soselfie/soselfie.xcodeproj/xcuserdata/tyg.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
